# arcane

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  conanfile.txt
app/: .clang-format  CMakeLists.txt
app/rc/: app.qrc
app/src/: authorization.cpp  authorization.h  authorization.ui  client.cpp  client.h  home.cpp  home.h  home.ui  inline_syscall.cpp  inline_syscall.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  manual_map.cpp  manual_map.h  notification.cpp  notification.h  query.cpp  query.h
app/src/packets/: initialization.hpp  load.hpp  update.hpp
client/: .clang-format  CMakeLists.txt
client/src/: client.cpp  client.h  game_logic_signals.hpp  injection_in_game_logic.cpp  injection_in_game_logic.h  main.cpp  main.h  plugin.cpp  plugin.h  query.cpp  query.h  socket.cpp  socket.h  unload.cpp  unload.h  unloader.cpp  unloader.h
client/src/actor/: actor.cpp  actor.h  air_walking.cpp  air_walking.h  anti_stun.cpp  anti_stun.h  auto_reload.cpp  auto_reload.h  disable_camera_reset.cpp  disable_camera_reset.h  fake_death.cpp  fake_death.h  fast_run.cpp  fast_run.h  heavy_fist.cpp  heavy_fist.h  infinite_ammo.cpp  infinite_ammo.h  infinite_clip.cpp  infinite_clip.h  infinite_health.cpp  infinite_health.h  infinite_run.cpp  infinite_run.h  spread_control.cpp  spread_control.h  stay_on_feet.cpp  stay_on_feet.h
client/src/backends/: imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_win32.h
client/src/miscellaneous/: miscellaneous.cpp  miscellaneous.h
client/src/patches/: camera_reset.cpp  camera_reset.h  drive_on_water.cpp  drive_on_water.h  fast_run.cpp  fast_run.h
client/src/shooting/: auto_cbug.cpp  auto_cbug.h  auto_shot.cpp  auto_shot.h  enemy_finder.cpp  enemy_finder.h  silent_aimbot.cpp  silent_aimbot.h  vector_aimbot.cpp  vector_aimbot.h
client/src/socket/: socket.cpp  socket.h
client/src/vehicle/: acceleration.cpp  acceleration.h  drive_on_water.cpp  drive_on_water.h  fast_exit.cpp  fast_exit.h  flip_car.cpp  flip_car.h  infinite_health.cpp  infinite_health.h  infinite_nitro.cpp  infinite_nitro.h  repair_car.cpp  repair_car.h  slap_car.cpp  slap_car.h  vehicle.cpp  vehicle.h
client/src/visuals/: visuals.cpp  visuals.h
loader/: CMakeLists.txt
loader/src/: main.cpp  main_window.cpp  main_window.h
loader/src/lite_regedit/: lite_regedit.hpp
loader/src/manualmap/: manualmap.cpp  manualmap.h  winapi.cpp  winapi.h
loader/src/socket/: socket.cpp  socket.h
server/: CMakeLists.txt
server/src/: main.cpp
server/src/database/: database.cpp  database.h
server/src/socket/: socket.cpp  socket.h
shared/: CMakeLists.txt
shared/configuration/: CMakeLists.txt
shared/configuration/include/configuration/: configuration.hpp  json_encrypted.hpp  json_naked.hpp
shared/configuration/include/configuration/keys/: model_group.hpp  rpc.hpp  silent_aimbot.hpp  vector_aimbot.hpp
shared/data_representation/: CMakeLists.txt
shared/data_representation/include/data_representation/: data_representation.h
shared/data_representation/src/data_representation/: data_representation.cpp
shared/protected_string/: CMakeLists.txt
shared/protected_string/include/protected_string/: protected_string.h
shared/protected_string/src/protected_string/: protected_string.cpp
shared/psdk_utils/: CMakeLists.txt
shared/psdk_utils/include/psdk_utils/: camera.h  cmath.h  key.h  local_vector.h  polar_vector.h  psdk_utils.h  weapon.h  world.h
shared/psdk_utils/src/psdk_utils/: camera.cpp  cmath.cpp  key.cpp  local_vector.cpp  polar_vector.cpp  psdk_utils.cpp  weapon.cpp  world.cpp
shared/samp_utils/: CMakeLists.txt
shared/samp_utils/include/samp_utils/: samp_utils.h
shared/samp_utils/src/samp_utils/: samp_utils.cpp
shared/utils/: CMakeLists.txt
shared/utils/include/utils/: randomizer.hpp  utils.h
shared/utils/src/utils/: utils.cpp
shared/winapi_utils/: CMakeLists.txt
shared/winapi_utils/include/winapi_utils/: details.hpp  winapi_utils.h
shared/winapi_utils/src/winapi_utils/: winapi_utils.cpp
updater/: CMakeLists.txt
updater/src/: main.cpp
